# getscipapers

./: .buildinfo  .gitignore  Changelog.md  Dockerfile  Makefile  README.md  action.sh  api_reference.html  cli_reference.html  configuration.html  credentials.example.json  docker-compose.yml  entrypoint.sh  genindex.html  getscipapers  index.html  objects.inv  project_documentation.html  py-modindex.html  pyproject.toml  requirements.txt  sample_credentials.json  sample_proxy_config.json  search.html  searchindex.js  setup.py  usage.html
.devcontainer/: credentials.json  devcontainer.json  post-start.sh  run.sh  set-secrets.sh
.devcontainer/getscipapers-container/: devcontainer.json
.devcontainer/ipfskubo-container/: devcontainer.json
.doctrees/: api_reference.doctree  cli_reference.doctree  configuration.doctree  environment.pickle  index.doctree  project_documentation.doctree  usage.doctree
.github/workflows/: build-docker.yml  checkin.yml  docs.yml
_modules/: index.html
_modules/getscipapers_hoanganhduc/: configuration.html  getpapers.html  nexus.html  (+3 more)
_sources/: cli_reference.rst.txt  configuration.rst.txt  project_documentation.md.txt  usage.rst.txt
docs/: PROJECT_DOCUMENTATION.md  requirements.txt
getscipapers_hoanganhduc/: Zlibrary.py  __init__.py  __main__.py  __name__.py  ablesci.py  checkin.py  configuration.py  facebook.py  getpapers.py  gui.py  libgen.py  nexus.py  proxy_config.py  remove_metadata.py  request.py  scinet.py  selenium_utils.py  upload.py  wosonhj.py  zlib.py
scripts/: optimize-ipfs.sh
tests/: test_getpapers_proxy_fallback.py
(+8 files in other folders)
